# atividade_lp3

./: README.md  pyproject.toml
atividade_lp3/: app.py
static/: style_padrao.css  style_simples.css
templates/: base.html  base2.html  como_utilizar.html  contato.html  home.html  home2.html  politica_privacidade.html  produtos.html  termos_uso.html
